--- a/ace-helm-master/ibm-ace-dev-for-microclimate/values.yaml
+++ b/ace-helm-master/ibm-ace-dev-for-microclimate/values.yaml
@@ -19,9 +19,9 @@ license: "accept"
 
 image:
   # repository is the container repository to use, which defaults to IIB docker registry hub image
-  repository: icpcluster.icp:8500/team1/ace-microclimate
+  repository: icpcluster.icp:8500/team1/ap-ace-microclimate
   # tag is the tag to use for the container repository
-  tag: latest
+  tag: 0468169
   # pullPolicy of IfNotPresent causes image pulling to be skipped if it already exists. Change to Always to force a pull.
   pullPolicy: IfNotPresent
   # pullSecret is the secret to use when pulling the image from a private registry
